# Yandex-Music-Unofficial

./: CHANGELOG.md  README.md  README.ru.md  build-release-macos.sh  build-release.bat  build-release.ps1  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
